--- a/DS_P4roj3_Calulator/DS_P4roj3_Calulator/DS_Proj3_Calulator.csproj
+++ b/DS_P4roj3_Calulator/DS_P4roj3_Calulator/DS_Proj3_Calulator.csproj
@@ -68,9 +68,10 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="MySetting.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stack.cs" />
+    <Compile Include="MyStack.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
